// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Heads up!
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      You can add components to your app using the cli.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > DescriptionOnly story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      This alert only contains a description without a title.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > Desktop story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Heads up!
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      You can add components to your app using the cli.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > Destructive story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90 w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Error
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      Your session has expired. Please log in again.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > Mobile story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Heads up!
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      You can add components to your app using the cli.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > Success story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check-big"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.801 10A10 10 0 1 1 17 3.335"
      />
      <path
        d="m9 11 3 3L22 4"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Success
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      Your changes have been saved successfully.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > Tablet story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Heads up!
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      You can add components to your app using the cli.
    </div>
  </div>
</div>
`;

exports[`Alert stories snapshot > WithIcon story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground w-[400px]"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Information
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      This alert includes an icon for better visual communication.
    </div>
  </div>
</div>
`;
